--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/react": "^18.3.11",
     "eslint": "^8",
     "eslint-config-next": "^0.2.4",
     "postcss": "^8.4.41",
